--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,4 +1,6 @@
 <h1>Garden Page</h1>
 
 <p>Garden Plants that take less than 100 days to harvest: </p>
-<%  %>
+<% @garden.plant_names_less_than_hundred.each do |name| %>
+  <p><%= name %></p>
+<% end %>
